@@ -2,6 +2,7 @@ Revision history for Gtk3::Notify.pm
 
 
 * Add more tests
+* Add repository details (links, ...) for CPAN
 * Skip tests that need a DISPLAY when there's not (CPAN RT#127946)
 
 0.02
